Fixed table spacing

--- a/app/tasks/tasksTable/styles.module.scss
+++ b/app/tasks/tasksTable/styles.module.scss
@@ -2,4 +2,8 @@
   &.completed {
     text-decoration: line-through;
   }
+
+  .actions {
+    display: flex;
+  }
 }
